azure-key-vault-properties-provider/2.2/modules/ROOT/pages/index.adoc
= Azure Key Vault Properties Provider 2.2 

Azure Key Vault Properties Provider is a configuration that enables you to retrieve your secrets from a secure Azure cloud service before your Mule app runs.

For information about compatibility and fixed issues, refer to the Azure Key Vault Properties Provider Release Notes.

== Before You Begin

To use this properties provider, you must be familiar with:

* The Azure Key Vault API
* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements and global elements in a Mule flow
* How to create a Mule app using Anypoint Studio

Before creating an app, you must have:

* Mule Enterprise Edition
* Credentials to access the Azure Key Vault target resource
* Anypoint Platform
* Anypoint Studio or Anypoint Code Builder

== Common Use Cases for the Properties Provider

With Azure Key Vault Properties Provider, secrets can be retrieved in the pre-runtime phase, which means secrets are populated before the Mule app is deployed.

== Connection Types

Connectors can use the Azure Key Vault Properties Provider in their configuration. In the configuration, use the `${azure-key-vault-properties-provider::secret::yourSecret}` structure to retrieve a secret from Azure Key Vault. Here is an example:

image::properties-provider-example.png["Example of a connector using Azure Key Vault Properties Provider in configuration window"]

[NOTE]
====
This example shows the legacy secret format `${azure-key-vault-properties-provider::secret::yourSecret}`, which applies to a single properties provider configuration. If your Mule app defines multiple configurations, use the namespaced format `${azure-key-vault-properties-provider::configName::secret::yourSecret}` instead.
====

Starting in version 2.2.0, you can define more than one Azure Key Vault Properties Provider configuration in the same Mule app, with each configuration connecting to a different key vault. To retrieve a secret from a specific vault, reference the secret using the configuration name as a namespace, in the format `${azure-key-vault-properties-provider::configName::secret::yourSecret}`, where `configName` is the value of the `name` attribute of the properties provider configuration. For more information, refer to xref:azure-key-vault-properties-provider-reference.adoc[Azure Key Vault Properties Provider Reference].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-use-exchange.adoc[Use Exchange to Discover Connectors, Templates, and Examples]
* xref:azure-key-vault-properties-provider-reference.adoc[Azure Key Vault Properties Provider Reference]
* https://help.salesforce.com[Salesforce Help]
